--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="container">
         <header>
             <h1>🌱 VerdeTech Quito</h1>
-            [cite_start]<p>Cultiva tu futuro, siembra inteligencia [cite: 26]</p>
+            <p>Cultiva tu futuro, siembra inteligencia</p>
         </header>
         
         <main>
@@ -23,5 +23,6 @@
     </div>
 
     <script src="script.js"></script>
+    
 </body>
 </html>
